# okr-core

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/okr_core/: __init__.py  __main__.py  _paths.py  api.py  cli.py  importer.py  models.py  scoring.py
tests/: test_api.py  test_importer.py  test_integration.py  test_models.py  test_scoring.py
