[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "okr-core"
version = "0.1.1"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/okr_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
