[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "okr-core"
version = "0.2.0"
description = "OKR scoring and tracking core library"
authors = [{name = "sumipan"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "pytest-cov>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/okr_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.mypy]
python_version = "3.11"
strict = false
